--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </div>
 
     <footer>
-        &copy; 2024 My Game Hub | Created by [Your Name]
+        &copy; 2024 My Game Hub | Created by [Code by Matt]
     </footer>
 </body>
 </html>
